--- a/app/javascript/stylesheets/_table_extensions.scss
+++ b/app/javascript/stylesheets/_table_extensions.scss
@@ -7,6 +7,10 @@
     margin-left: -15px;
     margin-right: -15px;
   }
+  td ul {
+    padding: 0 0 0 1.5rem;
+    margin: 0.5rem 0 0.5rem;
+  }
 }
 
 .table-list {
