--- a/app/views/layouts/new_admin.html.haml
+++ b/app/views/layouts/new_admin.html.haml
@@ -48,7 +48,7 @@
                                 { title: "Theft Alert Plans", path: admin_theft_alert_plans_path, match_controller: true },
                                 { title: "Payments", path: admin_payments_path, match_controller: true },
                                 { title: "Paid Features", path: admin_paid_features_path, match_controller: true },
-                                { title: "Invoices", path: admin_invoices_path, match_controller: true },
+                                { title: "Invoices", path: admin_invoices_path(query: "active", direction: "asc", sort: "subscription_end_at"), match_controller: true },
                                 { title: "Recoveries", path: admin_recoveries_path, match_controller: true },
                                 { title: "Recovery Displays", path: admin_recovery_displays_path, match_controller: true },
                                 { title: "Stolen Twitterbot", path: ENV["STOLEN_TWITTERBOT_URL"].gsub(/bikes\z/, ""), match_controller: false },
