--- a/app/views/admin/bikes/_admin_bikes_table.html.haml
+++ b/app/views/admin/bikes/_admin_bikes_table.html.haml
@@ -26,7 +26,7 @@
           Info
         %th.admin-bike-table-serial-cell
           Serial
-        %th.d-none.d-sm-table-cell
+        %th.d-sm-table-cell
           Created by
 
     %tbody
@@ -35,7 +35,7 @@
           %tr
             %td
               .less-strong-hold
-                %a.convertTime{ href: edit_admin_bike_url(bike) }
+                %a.small.convertTime{ href: edit_admin_bike_url(bike) }
                   = l bike.created_at, format: :convert_time
                 %span.less-strong-right.d-none.d-md-table-cell
                   - if bike.example
@@ -70,7 +70,7 @@
             %td.admin-bike-table-serial-cell
               %small.less-strong
                 = bike.serial_number
-            %td.d-none.d-sm-table-cell
+            %td.d-sm-table-cell
               .less-strong-hold
                 - if bike.creation_organization.present?
                   = link_to bike.creation_organization.name, admin_bikes_path(sortable_search_params.merge(organization_id: bike.creation_organization.to_param))
