--- a/app/views/admin/bikes/index.html.haml
+++ b/app/views/admin/bikes/index.html.haml
@@ -54,7 +54,7 @@
       = line_chart available_bikes.send(group_by_method(@time_range), "bikes.created_at").count, curve: false, thousands: ",", defer: true
     .col-12.mb-2.mt-2
       .row.justify-content-end
-        .col-2
+        .col-md-2.col-12
           %p
             %em.small.less-strong
               = number_with_delimiter(available_bikes.count)
