--- a/app/views/shared/_period_select.html.haml
+++ b/app/views/shared/_period_select.html.haml
@@ -1,4 +1,4 @@
-#timeSelectionBtnGroup.col.text-right{ role: "group" }
+#timeSelectionBtnGroup.col-md.col-12.text-right{ role: "group" }
   %button.btn.btn-outline-secondary.btn-sm{ class: ("active" if @period == "hour"), data: { period: "hour" } }
     last hour
   %button.btn.btn-outline-secondary.btn-sm{ class: ("active" if @period == "day"), data: { period: "day" } }
