minor admin spec update

--- a/app/javascript/stylesheets/_admin.scss
+++ b/app/javascript/stylesheets/_admin.scss
@@ -26,6 +26,9 @@
   .fancy-select {
     min-width: 300px;
     margin-top: 4px;
+    @include media-breakpoint-down(xs) {
+      min-width: 240px;
+    }
   }
 }
 
