--- a/app/assets/stylesheets/revised/mixins/_colors.scss
+++ b/app/assets/stylesheets/revised/mixins/_colors.scss
@@ -6,6 +6,7 @@ $blue-dark: #2c3e50;
 $blue-darkish: #2980b9;
 $blue: #3498db;
 $blue-light: #92c8ec;
+$blue-faint: #fffffff5;
 
 $gray-darkest: #1a1a1a;
 $gray-darker: #333333;
