--- a/app/views/bikes/_edit_primary_menu.html.haml
+++ b/app/views/bikes/_edit_primary_menu.html.haml
@@ -6,16 +6,16 @@
     %ul
       - @theft_templates.each do |template, description|
         %li{ class: "edit-menu-#{template}" }
-          - link_classname = @edit_template == template ? 'active' : ''
-          %a{ href: edit_bike_path(page: template), class: link_classname }
+          - is_active = 'active' if @edit_template.match(/#{template}/)
+          %a{ href: edit_bike_path(page: template), class: is_active }
             %h4= description
 
   %h3.nav-group-header Bike Details
   %ul
     - @bike_templates.each do |template, description|
       %li{ class: "edit-menu-#{template}" }
-        - link_classname = @edit_template == template ? 'active' : ''
-        %a{ href: edit_bike_path(page: template), class: link_classname }
+        - is_active = 'active' if @edit_template.match(/#{template}/)
+        %a{ href: edit_bike_path(page: template), class: is_active }
           %h4= description
 
   .form-well-edit-page-select
