--- a/app/views/bikes/edit_publicize.html.haml
+++ b/app/views/bikes/edit_publicize.html.haml
@@ -29,7 +29,7 @@
                                     "data-show-count" => false,
                                     "data-size" => "large",
                                     "data-url" => bike_url(@bike)}
-            %script{async: true, src: "https://platform.twitter.com/widgets.js", charset: "utf-8" }
+            %script{src: "https://platform.twitter.com/widgets.js", charset: "utf-8"}
             %a{href: "https://twitter.com/share?url=#{bike_url(@bike)}&text=Help me find my stolen bike!",
                target: "_blank"}
               .share-social.share-twitter Share on Twitter
