--- a/app/views/users/accept_vendor_terms.html.haml
+++ b/app/views/users/accept_vendor_terms.html.haml
@@ -6,16 +6,13 @@
 .accept-vendor-terms
 
   = form_for @user do |f|
-    
-    .form-horizontal
+
+    .form-group
       .control-group
-        %label
-          .control-label
-            = f.check_box :vendor_terms_of_service
-          .controls
-            I agree to Bike Index 
-            %strong
-              Terms of Service for Vendors.
+        = f.label :vendor_terms_of_service, class: "center-accept-terms-text" do
+          = f.check_box :vendor_terms_of_service
+          I agree to Bike Index
+          %strong
+            Terms of Service for Organizations.
     .agree-action
-      .control-group
-        = f.submit "Submit", class: 'button-blue'
+      = f.submit "Submit", class: "btn btn-primary btn-lg center-accept-terms-button"
