--- a/app/assets/stylesheets/revised/sections/form_well.scss
+++ b/app/assets/stylesheets/revised/sections/form_well.scss
@@ -116,6 +116,9 @@
   .form-group {
     clear: both;
 
+    label.checkbox-inline {
+      cursor: pointer;
+    }
     .checkbox-inline {
       padding-top: 0.5em;
     }
