--- a/app/views/bikes/edit_groups.html.haml
+++ b/app/views/bikes/edit_groups.html.haml
@@ -19,7 +19,7 @@
                     Creation organization
                   %p.form-well-input-static.bike_organization_static_input{ data: { orgid: @bike.creation_organization_id } }
                     = @bike.creation_organization.name
-                    %small.can-edit-checkbox
+                    %span.can-edit-checkbox
                       %label.checkbox-inline.not-fixed
                         = check_box_tag :organization_can_edit_claimed, @bike.creation_organization_id, @bike.editable_organizations.pluck(:id).include?(@bike.creation_organization_id)
                         Can edit this #{@bike.type}
@@ -35,7 +35,7 @@
                     Other organizations
                   %p.form-well-input-static.bike_organization_static_input{ data: { orgid: bike_organization.organization_id } }
                     = bike_organization.organization.name
-                    %small.can-edit-checkbox
+                    %span.can-edit-checkbox
                       %label.checkbox-inline.not-fixed
                         = check_box_tag :organization_can_edit_claimed, bike_organization.organization_id, bike_organization.can_edit_claimed
                         Can edit this #{@bike.type}
