add frontend and ugly controller ability

--- a/app/assets/stylesheets/revised/sections/form_well.scss
+++ b/app/assets/stylesheets/revised/sections/form_well.scss
@@ -150,6 +150,10 @@
     }
   }
 
+  .extra-footer-save {
+    display: none;
+  }
+
   hr {
     clear: both;
     margin-top: 3 * $vertical-height;
@@ -281,6 +285,15 @@
   .form-well .full-width-section {
     padding-left: 2 * $row-side-padding;
     padding-right: 2 * $row-side-padding;
+  }
+
+  .form-well .extra-footer-save {
+    display: block;
+    padding-top: 60px;
+    .btn {
+      display: block;
+      margin: 0 auto 0;
+    }
   }
 
   // because we have to use floats instead of flex with sticky (affixing edit menu)
