--- a/app/views/bikes/edit_accessories.html.haml
+++ b/app/views/bikes/edit_accessories.html.haml
@@ -20,3 +20,5 @@
             %hr
             .add-additional-fields-block.no-divider-row
               = revised_link_to_add_components 'Add a component', f, :components
+
+          = render "/shared/form_well_footer_save"
