--- a/app/views/bikes/edit_groups.html.haml
+++ b/app/views/bikes/edit_groups.html.haml
@@ -66,3 +66,4 @@
               %span.context-display-help
                 +
               Add an organization
+          = render "/shared/form_well_footer_save"
