--- a/app/views/bikes/edit_ownership.html.haml
+++ b/app/views/bikes/edit_ownership.html.haml
@@ -14,3 +14,4 @@
             = f.label :owner_email, class: 'form-well-label'
             .form-well-input
               = f.email_field :owner_email, required: true, class: 'form-control'
+          = render "/shared/form_well_footer_save"
