--- a/app/views/bikes/edit_theft_details.html.haml
+++ b/app/views/bikes/edit_theft_details.html.haml
@@ -84,3 +84,4 @@
                 Receive notifications from Bike Index about this stolen #{@bike.type}
               .full-width-checkbox-help
                 e.g. if we tweet about it or see someone searching for its serial number
+            = render "/shared/form_well_footer_save"
