--- a/app/views/bikes/edit_bike_details.html.haml
+++ b/app/views/bikes/edit_bike_details.html.haml
@@ -96,6 +96,8 @@
             .form-well-input
               = f.text_field :zipcode, class: 'form-control', placeholder: 'zip code'
 
+          = render "/shared/form_well_footer_save"
+
 - serial_correction_body = capture_haml do
   = form_tag do |t|
     .modal-body
