--- a/app/views/bikes/edit_drivetrain.html.haml
+++ b/app/views/bikes/edit_drivetrain.html.haml
@@ -53,7 +53,6 @@
                   = f.radio_button "#{side}_tire_narrow".to_sym, 'false'
                   Wide
 
-
         .form-wrap.secondary-form-wrap#edit_drivetrain
           .form-well-form-header
             %h3
@@ -124,3 +123,4 @@
                     = f.radio_button 'rear_gear_type_id', gt.id, class: "count_#{gt.count} internal_#{gt.internal}", data: {count: gt.count }
 
 
+        = render "/shared/form_well_footer_save"
