user edit pages

--- a/app/views/users/_edit_password.html.haml
+++ b/app/views/users/_edit_password.html.haml
@@ -14,3 +14,4 @@
     = f.label :password_confirmation, 'New password confirmation', class: 'form-well-label'
     .form-well-input
       = f.password_field :password_confirmation, placeholder: 'New Password confirmation', class: 'form-control'
+  = render "/shared/form_well_footer_save"
