--- a/app/views/admin/users/edit.html.haml
+++ b/app/views/admin/users/edit.html.haml
@@ -22,6 +22,13 @@
             = "&#x2713;".html_safe if @user.notification_newsletters
         %tr
           %td
+            Vendor terms?
+          %td
+            - if @user.when_vendor_terms_of_service.present?
+              %span.convertTime
+                = l @user.when_vendor_terms_of_service, format: :convert_time
+        %tr
+          %td
             Email: Unstolen
           %td
             = "&#x2713;".html_safe if @user.notification_unstolen
