Add is_disabled: true to other places in bike editing

--- a/app/views/bikes/edit_remove.html.haml
+++ b/app/views/bikes/edit_remove.html.haml
@@ -1,7 +1,7 @@
 = form_for @bike, multipart: true, html: { class: 'primary-edit-bike-form' } do |f|
   .form-well-container.container{ class: "edit-bike-page-#{@edit_template}" }
     .row
-      = render partial: '/bikes/edit_primary_menu'
+      = render partial: '/bikes/edit_primary_menu', locals: { is_disabled: true }
       .col-md-8.form-well
         .form-wrap
           .form-well-form-header
