--- a/app/views/users/_edit_password.html.haml
+++ b/app/views/users/_edit_password.html.haml
@@ -1,5 +1,5 @@
 .form-wrap
-  .form-well-form-header
+  .form-well-form-header-always-visible
     %h3
       Reset password
   .form-group.row.unnested-field
