--- a/app/views/users/_edit_root.html.haml
+++ b/app/views/users/_edit_root.html.haml
@@ -1,5 +1,5 @@
 .form-wrap
-  .form-well-form-header
+  .form-well-form-header-always-visible
     %h3
       Personal Information for
       = @user.display_name
