--- a/app/views/bikes/edit_alert.html.haml
+++ b/app/views/bikes/edit_alert.html.haml
@@ -3,13 +3,11 @@
     .row
       = render partial: "/bikes/edit_primary_menu", locals: { is_disabled: true }
       .col-md-8.form-well
-        .form-wrap{style: "padding-bottom: 20px;"}
-          - if @theft_alerts.present?
-            .row &nbsp;
-            .row
-              .col-md-12
-                = render partial: "theft_alerts_table", locals: { theft_alerts: @theft_alerts }
-          .form-well-form-header
+
+        = render partial: "theft_alerts_table", locals: { theft_alerts: @theft_alerts, first_form_well: true }
+
+        .form-wrap{ class: @theft_alerts.present? ? "secondary-form-wrap" : "" }
+          .form-well-form-header-always-visible
             / Activate Bike Index Alert
             %h3.text-center.w-100
               = @edit_templates[@edit_template]
