--- a/app/views/users/globalid.html.haml
+++ b/app/views/users/globalid.html.haml
@@ -1,3 +1,3 @@
 .container
   %h3.header-font-alt
-    = link_to "Sign in with LocaliD", "/auth/localid"
+    = link_to "Sign in with GlobaliD", "/auth/globalid"
