don't explode on empty bike

--- a/app/views/admin/theft_alerts/edit.html.haml
+++ b/app/views/admin/theft_alerts/edit.html.haml
@@ -12,6 +12,6 @@
       = f.text_field :facebook_post_url, class: "form-control"
     .form-group
       = f.label :notes, class: "form-label"
-      = f.text_field :notes, class: "form-control"
+      = f.text_area :notes, class: "form-control"
     .form-group
       = submit_tag "Begin", class: "btn btn-info"
