start and end because of grammar

--- a/app/views/admin/theft_alerts/index.html.haml
+++ b/app/views/admin/theft_alerts/index.html.haml
@@ -11,8 +11,8 @@
         %th Creator
         %th Plan
         %th Status
-        %th Begins at
-        %th Ends at
+        %th Start
+        %th End
         %th Facebook post
         %th
     %tbody
