--- a/app/views/admin/theft_alerts/edit.html.haml
+++ b/app/views/admin/theft_alerts/edit.html.haml
@@ -6,7 +6,15 @@
     url: admin_theft_alert_path(@theft_alert),
     method: :patch,
     html: { class: "m-0" } do |f|
-    = hidden_field_tag :state_transition, params.fetch(:state_transition, "update_details")
+    .form-group
+      = f.label :status, class: "form-label"
+      = f.select :status, options_for_select(TheftAlert.statuses.keys), class: "form-control"
+    .form-group
+      = f.label :begin_at, class: "form-label"
+      = f.datetime_select :begin_at, include_blank: true, class: "form-control"
+    .form-group
+      = f.label :end_at, class: "form-label"
+      = f.datetime_select :end_at, include_blank: true, class: "form-control"
     .form-group
       = f.label :facebook_post_url, class: "form-label"
       = f.text_field :facebook_post_url, class: "form-control"
