--- a/app/views/admin/theft_alerts/edit.html.haml
+++ b/app/views/admin/theft_alerts/edit.html.haml
@@ -10,6 +10,9 @@
       = f.label :status, class: "form-label"
       = f.select :status, options_for_select(TheftAlert.statuses.keys), class: "form-control"
     .form-group
+      = f.label :theft_alert_plan_id, class: "form-label"
+      = f.select :theft_alert_plan_id, options_for_select(TheftAlertPlan.active.pluck(:name, :id)), class: "form-control"
+    .form-group
       = f.label :begin_at, class: "form-label"
       = f.datetime_select :begin_at, include_blank: true, class: "form-control"
     .form-group
