--- a/app/views/admin_mailer/theft_alert_purchased.text.haml
+++ b/app/views/admin_mailer/theft_alert_purchased.text.haml
@@ -11,7 +11,7 @@
   Theft Alert Plan
   ----------------
 
-  #{@theft_alert_plan.name} (#{@theft_alert_plan.duration_days} days)
+  #{@theft_alert_plan.title_string}
 
 
   User
