--- a/app/views/admin/theft_alerts/edit.html.haml
+++ b/app/views/admin/theft_alerts/edit.html.haml
@@ -6,23 +6,33 @@
     url: admin_theft_alert_path(@theft_alert),
     method: :patch,
     html: { class: "m-0" } do |f|
+
     .form-group
       = f.label :status, class: "form-label"
-      = f.select :status, options_for_select(TheftAlert.statuses.keys), class: "form-control"
+      = f.select :status,
+        options_for_select(TheftAlert.statuses.keys, @theft_alert.status),
+        class: "form-control"
     .form-group
+      - plan_options = TheftAlertPlan.active.map { |e| [e.title_string, e.id] }
       = f.label :theft_alert_plan_id, class: "form-label"
-      = f.select :theft_alert_plan_id, options_for_select(TheftAlertPlan.active.map{|e| [e.title_string, e.id]}), class: "form-control"
-    .form-group
-      = f.label :begin_at, class: "form-label"
-      = f.datetime_select :begin_at, include_blank: true, class: "form-control"
-    .form-group
-      = f.label :end_at, class: "form-label"
-      = f.datetime_select :end_at, include_blank: true, class: "form-control"
+      = f.select :theft_alert_plan_id,
+        options_for_select(plan_options, @theft_alert.theft_alert_plan.id),
+        class: "form-control"
+
+    - unless @theft_alert.pending?
+      .form-group
+        = f.label :begin_at, class: "form-label"
+        = f.datetime_select :begin_at, include_blank: true, class: "form-control"
+      .form-group
+        = f.label :end_at, class: "form-label"
+        = f.datetime_select :end_at, include_blank: true, class: "form-control"
+
     .form-group
       = f.label :facebook_post_url, class: "form-label"
       = f.text_field :facebook_post_url, class: "form-control"
     .form-group
       = f.label :notes, class: "form-label"
       = f.text_area :notes, class: "form-control"
+
     .form-group
-      = submit_tag "Begin", class: "btn btn-info"
+      = submit_tag "Save", class: "btn btn-info"
