--- a/app/views/admin/theft_alerts/index.html.haml
+++ b/app/views/admin/theft_alerts/index.html.haml
@@ -24,7 +24,7 @@
           %td
             - if alert.bike.present?
               = link_to alert.bike.id, edit_admin_bike_path(alert.bike)
-            - if alert.bike_recovered?
+            - if alert.recovered?
               #{alert.bike.type} recovered
           %td
             = link_to alert.creator.email, edit_admin_user_path(alert.creator.email)
