--- a/app/views/admin/theft_alerts/index.html.haml
+++ b/app/views/admin/theft_alerts/index.html.haml
@@ -30,7 +30,7 @@
             = link_to alert.creator.email, edit_admin_user_path(alert.creator.email)
           %td
             - plan = alert.theft_alert_plan
-            = link_to "#{plan.name} (#{plan.duration_days} days)", edit_admin_theft_alert_plan_path(plan)
+            = link_to plan.title_string, edit_admin_theft_alert_plan_path(plan)
           %td
             = link_to alert.status, edit_admin_theft_alert_path(alert)
           %td
@@ -41,26 +41,7 @@
               .convertTime= l(alert.end_at, format: :convert_time) if alert.end_at.present?
           %td
             = link_to "link", alert.facebook_post_url, target: "_blank" if alert.facebook_post_url.present?
-
           %td
-            - case alert.status
-            - when "pending"
-              = form_tag edit_admin_theft_alert_path(alert), method: :get do |f|
-                = hidden_field_tag :state_transition, "begin"
-                = submit_tag "Begin Alert", class: "btn btn-success p-1"
-            - when "active"
-              = form_for alert,
-                url: admin_theft_alert_path(alert),
-                method: :patch do |f|
-                = hidden_field_tag :state_transition, "end"
-                = f.hidden_field :status
-                = submit_tag "End Alert", class: "btn btn-danger p-1", data: { confirm: "Are you sure?" }
-            - when "inactive"
-              = form_for alert,
-                url: admin_theft_alert_path(alert),
-                method: :patch do |f|
-                = hidden_field_tag :state_transition, "reset"
-                = f.hidden_field :status
-                = submit_tag "Reset Alert", class: "btn btn-warning p-1", data: { confirm: "Are you sure?" }
+            = link_to "Update", edit_admin_theft_alert_path(alert), class: "btn btn-info p-1"
 
 = paginate @theft_alerts, views_prefix: "admin"
