--- a/app/views/public_images/_public_image.html.erb
+++ b/app/views/public_images/_public_image.html.erb
@@ -1,19 +1,26 @@
 <% skip_order ||= false %>
 <li class="public_image" id="<%= public_image.id %>">
-  <div class='processing'>... processing</div>
-  <%= image_tag(public_image.image_url(:small)) if public_image.image? %>
-  <div class="name"><%= public_image.name.truncate(18) %></div>
-  <div class="actions">
-    <% if public_image.imageable_type != 'Blog' %>
-      <textarea class="code-to-enter">&lt;img class="post-image" src="<%= public_image.image_url %>" alt="ENTER YOUR TEXT HERE"&gt;</textarea>
-      <p><span>Copy the above text and paste it where you'd like it to appear</span></p>
-    <% else %>
-      <textarea class="code-to-enter">&lt;img class="post-image" src="<%= public_image.image_url %>" alt="ENTER YOUR TEXT HERE"&gt;</textarea>
-      <p>
-        <span>Copy the above text and paste it where you'd like it to appear in the post</span>
-        <%= link_to "Delete image", public_image_url(public_image, return_url: edit_admin_news_url(@blog)), method: :delete, class: "photo-remove" %>
-      </p>
-    <% end %>
+  <div class="row">
+     <div class="col-md-2">
+      <%= image_tag(public_image.image_url(:small)) if public_image.image? %>
+      <p><%= public_image.name.truncate(18) %></p>
+      <em class="less-strong">processing...</em>
+    </div>
+    <div class="col-md-6 form-group">
+      <% if public_image.imageable_type != 'Blog' %>
+        <textarea class="form-control">&lt;img class="post-image" src="<%= public_image.image_url %>" alt="ENTER YOUR TEXT HERE"&gt;</textarea>
+        <p><span>Copy the above text and paste it where you'd like it to appear</span></p>
+      <% else %>
+        <textarea class="form-control">&lt;img class="post-image" src="<%= public_image.image_url %>" alt="ENTER YOUR TEXT HERE"&gt;</textarea>
+        <p class= "mt-4">
+          <span>Copy the above text and paste it where you'd like it to appear in the post</span>
+          <%= link_to "Delete image", public_image_url(public_image, return_url: edit_admin_news_url(@blog)), method: :delete, class: "btn btn-danger float-right" %>
+        </p>
+      <% end %>
+    </div>
+    <div class="col-md-4">
+      <img src="#{public_image.image_url}"></img>
+    </div>
   </div>
   <% unless skip_order %>
     <div class="index-image-select"><input type="radio" name="index_image_id" value="<%= public_image.id %>" class="index_image_<%= public_image.id %>"></div>
