--- a/app/views/public_images/_public_image.html.erb
+++ b/app/views/public_images/_public_image.html.erb
@@ -19,7 +19,9 @@
       <% end %>
     </div>
     <div class="col-md-4">
-      <img src="#{public_image.image_url}"></img>
+      <% if public_image.image_url.present? %>
+        <img src="#{public_image.image_url}"></img>
+      <% end %>
     </div>
   </div>
   <% unless skip_order %>
