--- a/app/views/admin/news/_form.html.haml
+++ b/app/views/admin/news/_form.html.haml
@@ -1,2 +1,2 @@
-.form-group
-  = f.text_area :body, placeholder: "Blog post (in markdown)", rows: 20, class: "form-control"
+.blog-field
+  = f.text_area :body, placeholder: "Blog post (in markdown)", rows: 20
