--- a/app/views/bikes/_edit_primary_menu.html.haml
+++ b/app/views/bikes/_edit_primary_menu.html.haml
@@ -15,7 +15,7 @@
     - @bike_templates.each do |template, description|
       %li{ class: "edit-menu-#{template}" }
         - is_active = 'active' if @edit_template.match(/#{template}/)
-        %a{ href: edit_bike_path(page: template), class: is_active }
+        %a{ href: edit_bike_path(id: @bike.to_param, page: template), class: is_active }
           %h4= description
 
   .form-well-edit-page-select
