--- a/app/views/bikes/edit_publicize.html.haml
+++ b/app/views/bikes/edit_publicize.html.haml
@@ -6,7 +6,9 @@
       = render partial: "/bikes/edit_primary_menu", locals: { is_disabled: true }
 
       .col-md-8.form-well#form_well_wrap
-        .form-wrap
+        = render partial: "/bikes/stolen_checklist", locals: { stolen_record: @bike.current_stolen_record }
+
+        .form-wrap{ class: @bike.current_stolen_record.display_checklist? ? "secondary-form-wrap" : "" }
           .form-well-form-header
             / Publicize Theft
             %h3= @edit_templates[@edit_template]
