--- a/app/views/bikes/edit_theft_details.html.haml
+++ b/app/views/bikes/edit_theft_details.html.haml
@@ -6,7 +6,8 @@
       = render partial: '/bikes/edit_primary_menu'
 
       .col-md-8.form-well#form_well_wrap
-        .form-wrap
+        = render partial: "/bikes/stolen_checklist", locals: { stolen_record: @bike.current_stolen_record }
+        .form-wrap.secondary-form-wrap
           .form-well-form-header
             / Theft Details
             %h3= @edit_templates[@edit_template]
