--- a/app/views/bikes/_stolen_checklist.html.haml
+++ b/app/views/bikes/_stolen_checklist.html.haml
@@ -29,5 +29,5 @@
         = link_to "Share widely on your personal social media", edit_bike_path(id: @bike.to_param, page: "publicize")
         (Facebook, Instagram, etc)
       %li{ class: stolen_record.theft_alerts.any? ? "completed-item" : "" }
-        Supercharge sharing on Facebook with our
+        Supercharge sharing on Facebook with Bike Index
         = link_to "Premium Stolen Bike Alerts", edit_bike_path(id: @bike.to_param, page: "alert")
