--- a/app/assets/stylesheets/revised/pages/bikes/stolen_checklist.scss
+++ b/app/assets/stylesheets/revised/pages/bikes/stolen_checklist.scss
@@ -1,4 +1,5 @@
 .stolen-checklist-wrap {
+  padding-bottom: 0;
   ul {
     margin: 0;
     padding: 0;
@@ -8,20 +9,20 @@
   li {
     display: block;
     padding: 0 0 0 2rem;
-    margin: 0;
+    margin: 0 0 0.25rem;
     position: relative;
 
-    &:before {
+    .checklist-checkbox {
       display: block;
       position: absolute;
       background: #fff;
-      left: 0.5rem;
-      top: 0.5rem;
+      left: 0.25em;
+      top: 0.25em;
       border: 2px solid #919197;
       border-radius: 50%;
-      content: "";
-      min-width: 1.2em;
-      min-height: 1.2em;
+      // content: "";
+      min-width: 1.5em;
+      min-height: 1.5em;
       vertical-align: middle;
       line-height: 1;
       padding: 0.1em;
@@ -29,11 +30,11 @@
     &.completed-item {
       text-decoration: line-through;
       opacity: 0.75;
-      &:before {
+      .checklist-checkbox {
         // background-color: #3498db;
         // border-color: #ffffff;
         color: #919197;
-        content: "\2713";
+        // content: "\2713";
         font-family: "zp-icons";
         font-style: normal;
         font-variant: normal;
