checklist on the pages

--- a/app/views/bikes/edit_publicize.html.haml
+++ b/app/views/bikes/edit_publicize.html.haml
@@ -6,7 +6,11 @@
       = render partial: "/bikes/edit_primary_menu", locals: { is_disabled: true }
 
       .col-md-8.form-well#form_well_wrap
-        = render partial: "/bikes/stolen_checklist", locals: { stolen_record: @bike.current_stolen_record }
+        .form-wrap.stolen-checklist-wrap
+          .form-well-form-header-always-visible
+            %h3.header-font-alt
+              Do these things for the best chance of recovery!
+          = render partial: "/bikes/stolen_checklist", locals: { stolen_record: @bike.current_stolen_record }
 
         .form-wrap{ class: @bike.current_stolen_record.display_checklist? ? "secondary-form-wrap" : "" }
           .form-well-form-header
