--- a/app/assets/stylesheets/email.scss
+++ b/app/assets/stylesheets/email.scss
@@ -12,6 +12,7 @@ $email-light-bg: #ddd;
 @import "revised/emails/email_sections";
 @import "revised/emails/email_components";
 @import "revised/emails/email_bike_display";
+@import "revised/emails/email_stolen_checklist";
 @import "revised/emails/email_partners";
 
 .stolen-notification-from {
